--- a/public/back/login.html
+++ b/public/back/login.html
@@ -8,6 +8,7 @@
   <title>登录页面</title>
   <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.css">
+  <link rel="stylesheet" href="lib/nprogress/nprogress.css">
   <link rel="stylesheet" href="./css/common.css">
 </head>
 
@@ -47,6 +48,7 @@
   <script src="./lib/jquery/jquery.min.js"></script>
   <script src="./lib/bootstrap/js/bootstrap.js"></script>
   <script src="./lib//bootstrap-validator/js/bootstrapValidator.min.js"></script>
+  <script src="lib/nprogress/nprogress.js"></script>
   <script src="js/login.js"></script>
 </body>
 
