--- a/public/back/first.html
+++ b/public/back/first.html
@@ -22,7 +22,7 @@
     </div>
     <!-- 用户 -->
     <div class="user">
-      <img src="./images/02.jpg" alt="">
+      <img src="images/196213344002472805.jpg" alt="">
       <p>超级管理员</p>
     </div>
     <!-- 导航 -->
