--- a/public/back/product.html
+++ b/public/back/product.html
@@ -22,7 +22,7 @@
     </div>
     <!-- 用户 -->
     <div class="user">
-      <img src="./images/02.jpg" alt="">
+      <img src="images/196213344002472805.jpg" alt="">
       <p>超级管理员</p>
     </div>
     <!-- 导航 -->
@@ -31,12 +31,12 @@
         <li><a href="user.html"><i class="glyphicon glyphicon-user"></i><span>用户管理</span></a></li>
         <li>
           <a href="javascript:;" class="category"><i class="glyphicon glyphicon-list"></i><span>分类管理</span></a>
-          <div class="child">
-            <a href="first.html" class="current">一级分类</a>
+          <div class="child" style="display: none">
+            <a href="first.html">一级分类</a>
             <a href="second.html">二级分类</a>
           </div>
         </li>
-        <li><a href="product.html"><i class="glyphicon glyphicon-tags"></i><span>商品管理</span></a></li>
+        <li><a class="current" href="product.html"><i class="glyphicon glyphicon-tags"></i><span>商品管理</span></a></li>
       </ul>
     </div>
   </div>
@@ -61,8 +61,7 @@
       <!-- 面包屑导航, 路径导航 -->
       <ol class="breadcrumb">
         <li><a href="index.html">管理系统</a></li>
-        <li class="active">分类管理</li>
-        <li class="active">一级分类</li>
+        <li class="active">商品管理</li>
       </ol>
 
 
