--- a/public/back/user.html
+++ b/public/back/user.html
@@ -70,7 +70,7 @@
            1. table-bordered  添加边框
            2. table-hover     添加hover效果
       -->
-        <table class="table table-bordered table-hover">
+        <table class="table table-bordered .table-hover text-center">
           <thead>
             <tr>
               <th>序号</th>
@@ -81,8 +81,6 @@
             </tr>
           </thead>
           <tbody>
-            <!-- 多行操作: 滚轮往下, 选中多行, ctrl + shift + -> 选中单个词 -->
-            <!-- 挖个坑 -->
           </tbody>
         </table>
 
@@ -128,30 +126,25 @@
 
   <!-- 准备模板 -->
   <!-- type 类型写成 text/html 和 text/template 都可以说明, 该script为模板 -->
-  <script type="text/html" id="tpl">
-    {{ each rows v i }}
-    <tr>
-      <td>{{ i + 1 + (page-1) * size }}</td>
-      <td>{{ v.username }}</td>
-      <td>{{ v.mobile }}</td>
-      <!-- isDelete 标记当前用户的状态
-           如果为 1, 已启用
-           如果为 0, 已禁用
-      -->
-      <td>{{ v.isDelete === 1 ? "正常" : "已禁用" }}</td>
+  <script type="text/html" id="tmp">
+    {{ each rows v i}}
+      <tr>
+        <td> {{ i + 1 + (page - 1 ) * size }} </td>
+        <td> {{ v.username }}</td>
+        <td> {{ v.mobile }}</td>
+        <td> {{ v.isDelete === 1 ? "正常" : "已禁用" }} </td>
+        <td>
+          {{ if v.isDelete === 1 }}
+            <button class="btn btn-danger">禁用</button>
+          {{ /if }}
+          {{ if v.isDelete === 0 }}
+            <button class="btn btn-success">启用</button>
+          {{ /if }}
+        </td>
+      </tr>
+    {{ /each }}
+  </script>
 
-      <td>
-        {{ if v.isDelete === 1 }}
-          <button class="btn btn-danger">禁用</button>
-        {{ /if }}
-
-        {{ if v.isDelete === 0 }}
-          <button class="btn btn-success">启用</button>
-        {{ /if }}
-      </td>
-    </tr>
-  {{ /each }}
-</script>
 
 
 
